--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,9 @@ input {
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 ul,
