--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,262 @@
 */
 
 .page {
-  min-inline-size: 320px;
-  min-block-size: 100dvb;
+    min-inline-size: 320px;
+    min-block-size: 100dvb;
+    max-inline-size: 700px;
+    margin-inline: auto;
+    margin-block: 100px 105px;
+    background-image: var(--background-image);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: var(--main-font-family), sans-serif;
+}
+
+.button {
+    position: relative;
+    background: transparent;
+    border: 2px solid var(--main-color);
+    cursor: pointer;
+}
+
+.button::before {
+    content: '';
+    position: absolute;
+    background: var(--main-color);
+    transition: inline-size 0.5s ease-in-out;
+    inset-inline-start: 0;
+    inset-block-start: 0;
+    block-size: 100%;
+    inline-size: 0;
+}
+
+.button:hover::before {
+    inline-size: 100%;
+}
+
+.button:focus {
+    outline: none;
+}
+
+.button:focus-visible {
+    box-shadow: 2px 2px 0 var(--main-color);
+}
+
+.button__text {
+    color: #fff;
+    mix-blend-mode: difference;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: clamp(120px, calc(120px + (8 * ((100vw - 375px) / 1065))), 128px) 0;
+    gap: 20px;
+    font-family: var(--accent-font-family), sans-serif;
+    border: 2px solid var(--main-color);
+    background: var(--main-bg);
+    margin-block-end: 100px;
+}
+
+.header__title {
+    font-size: var(--header-title-font-size);
+}
+
+.header__subtitle {
+    font-size: var(--header-subtitle-font-size);
+    text-transform: uppercase;
+}
+
+/*card*/
+
+.card {
+    background: var(--main-bg);
+    border: 2px solid var(--main-color);
+    margin-bottom: 50px;
+}
+
+.card__title {
+    font-size: var(--base-font-size);
+    padding: 5px 10px;
+    border-bottom: 2px solid var(--main-color);
+}
+
+.card__image-wrapper {
+    position: relative;
+    line-height: 0;
+    overflow: hidden;
+}
+
+.card__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card__watermark {
+    opacity: 0.5;
+    z-index: 1;
+    font-family: var(--accent-font-family), sans-serif;
+    font-size: 14px;
+    color: var(--main-color);
+    text-shadow: 1px 1px var(--main-bg),
+    -1px -1px var(--main-bg),
+    -1px 1px var(--main-bg),
+    1px -1px var(--main-bg);
+    position: absolute;
+    top: 32px;
+    right: 25px;
+}
+
+@supports (text-stroke: 1px var(--main-bg)) or (-webkit-text-stroke: 1px var(--main-bg)) {
+    .card__watermark {
+        text-stroke: 1px var(--main-bg);
+        -webkit-text-stroke: 1px var(--main-bg);
+        text-shadow: none;
+    }
+}
+
+.card__description {
+    border-top: 2px solid var(--main-color);
+    padding: 25px;
+    display: grid;
+}
+
+.card__description-text {
+    font-size: var(--base-font-size);
+    line-height: calc(21 / 18);
+    margin-bottom: 25px;
+}
+
+.card__description-text:first-child {
+    margin-bottom: 27px;
+}
+
+.card__button-wrapper {
+    display: flex;
+    justify-content: end;
+    gap: 7px;
+}
+
+.card__like-button {
+    background-color: var(--main-bg);
+    font-family: var(--accent-font-family), sans-serif;
+    font-size: 14px;
+    inline-size: 130px;
+    padding-block: 10px;
+}
+
+.card__icon-button {
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+    border: none;
+    padding: 0;
+}
+
+.save-button {
+    background-color: var(--main-bg);
+    display: flex;
+    align-items: center;
+    margin-inline: auto;
+    gap: 8px;
+    padding: 15px 20px;
+    font-family: var(--accent-font-family), sans-serif;
+    font-size: 14px;
+}
+
+.save-button__icon {
+    color: #fff;
+    mix-blend-mode: difference;
+}
+
+.saturate {
+    filter: saturate(30%);
+}
+
+.brightness {
+    filter: brightness(200%);
+}
+
+.sepia {
+    filter: sepia(60%);
+}
+
+.invert {
+    filter: invert(80%);
+}
+
+.grayscale {
+    filter: grayscale(80%);
+}
+
+.hue-rotate {
+    filter: hue-rotate(90deg) blur(2px);
+}
+
+.blur {
+    filter: blur(13px);
+}
+
+.dialog::backdrop {
+    opacity: 0.75;
+    background-color: #000;
+}
+
+.dialog {
+    border: 2px solid var(--main-color);
+    padding: 28px;
+    font-size: 14px;
+    text-transform: uppercase;
+    background-color: var(--main-bg);
+    max-inline-size: clamp(21.3125rem, 21.0484rem + 1.1268vw, 22.0625rem);
+}
+
+.dialog__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin-block-end: 30px;
+}
+
+.dialog-floppy {
+    color: #fff;
+    mix-blend-mode: difference;
+}
+
+.dialog__text {
+    font-size: 14px;
+    line-height: 1.5;
+    font-family: var(--accent-font-family), sans-serif;
+    max-inline-size: clamp(12.375rem, 11.5827rem + 3.3803vw, 14.625rem);
+}
+
+.dialog__button {
+    font-family: var(--accent-font-family), sans-serif;
+    padding: 13px 0;
+    text-transform: uppercase;
+    inline-size: 100%;
+}
+
+@media (max-width: 500px) {
+    .save-button__icon {
+        width: 30px;
+        height: 30px;
+    }
+
+    .save-button {
+        flex-direction: column;
+        gap: 6px;
+    }
+
+    .dialog {
+        padding: 28px 40px;
+    }
 }
