--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@
     background-size: cover;
     background-attachment: fixed;
     font-family: var(--main-font-family), sans-serif;
+    font-variation-settings: 'wght' 400, 'slnt' 0;
 }
 
 .button {
