--- a/styles/style.css
+++ b/styles/style.css
@@ -235,12 +235,11 @@
     font-size: 14px;
     text-transform: uppercase;
     background-color: var(--main-bg);
-    max-inline-size: clamp(21.3125rem, 21.0484rem + 1.1268vw, 22.0625rem);
+    inline-size: clamp(341px, calc(341px + (353 - 341) * ((100vw - 375px) / (1440 - 375))), 353px);
 }
 
 .dialog__content {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     gap: 20px;
     margin-block-end: 30px;
@@ -259,9 +258,10 @@
 }
 
 .dialog__button {
-    padding: 12.5px 0;
+    padding: 10px 17px;
     text-transform: uppercase;
     inline-size: 100%;
+    line-height: 1;
 }
 
 @media (max-width: 500px) {
