--- a/styles/animations.css
+++ b/styles/animations.css
@@ -42,7 +42,7 @@
 
 .card__icon-button .contour {
     fill: var(--main-color);
-    transition: fill 0.3s 0.06s linear;
+    transition: fill 0.1s linear;
 }
 
 .card__icon-button .main-body {
@@ -50,29 +50,44 @@
     transition: fill 0.3s linear;
 }
 
-.card__icon-button:hover .main-body {
-    fill: var(--main-color);
-    transition-delay: 0.03s;
-}
-
 .card__icon-button .core {
     fill: transparent;
+    transition: fill 0.3s 0.03s linear;
+}
+
+.card__icon-button:hover .main-body {
+    fill: var(--main-color);
     transition: fill 0.3s 0.05s linear;
 }
 
 .card__icon-button:hover .core {
     fill: var(--main-color);
+    transition: fill 0.3s linear;
 }
 
-.card__icon-button:active .core,
+.card__icon-button:active .core {
+    fill: var(--heart-color);
+    transition: fill 0.3s linear;
+}
+
 .card__icon-button:active .main-body {
     fill: var(--heart-color);
+    transition: fill 0.3s 0.05s linear;
 }
 
-.like-icon.is-liked .core,
-.like-icon.is-liked .main-body,
+.like-icon.is-liked .core {
+    fill: var(--heart-color);
+    transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+    fill: var(--heart-color);
+    transition: fill 0.3s 0.05s linear;
+}
+
 .like-icon.is-liked .contour {
     fill: var(--heart-color);
+    transition: fill 0.3s 0.06s linear;
 }
 
 .like-icon.is-liked .heart {
